--- a/miapp/templates/turismo.html
+++ b/miapp/templates/turismo.html
@@ -442,7 +442,7 @@
   <div class="cards">
     <article class="card">
       <div class="card-img">
-        <img src="https://images.unsplash.com/photo-1500534314211-0a24cd03f2c0?auto=format&fit=crop&w=900&q=80"
+        <img src="https://plus.unsplash.com/premium_photo-1661908853318-893732a14e42?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
              alt="Ciudad nocturna">
       </div>
       <div class="card-title-row">
